@@ -1,3 +1,7 @@
+2007-02-04  Martin Mares  <mj@ucw.cz>
+
+	* lspci.c: alloca() needs <alloca.h>.
+
 2006-09-17  Martin Mares  <mj@ucw.cz>
 
 	* lib/dump.c: Fixed a couple of bugs in the dump backend which caused
